02-kubernetes-deployment/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-app
  labels:
    name: flask-app
    project: devops-learning
